# planning_test

./: CMakeLists.txt  package.xml  pick_and_place_world  setup.py
launch/: demo_world_intialization.launch  sawyer_pick_and_place_demo.launch
models/green_block/: model.urdf
models/green_bowl/: model.config  model.sdf
models/red_block/: model.urdf
models/red_bowl/: model.config  model.sdf
scripts/: ik_pick_and_place_demo.py
