<?xml version="1.0"?>
<package>
  <name>planning_sim_demo</name>
  <version>1.0.0</version>
  <description>The planning_sim_demo package</description>

  <maintainer email="carl.mueller@colorado.edu">
    Carl Mueller
  </maintainer>
  <license>Apache 2.0</license>
  <author>Carl Mueller</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>sawyer_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
